# codekoan

./: .gitignore  Application.hs  Foundation.hs  LICENSE  README.md  Settings.hs  ma-site.cabal  ma-xml-analyzer.cabal  stack.yaml
Handler/: #Submit.hs#  Display.hs  Home.hs  Submit.hs
build-index/: Main.hs
codekoan-language-haskell/: codekoan-language-haskell.cabal
codekoan-language-java/: codekoan-language-java.cabal  stack.yaml.old
codekoan-language-python/: codekoan-language-python.cabal
codekoan-messaging/: stack.yaml.old
codekoan-postgres-indexer/: codekoan-postgres-indexer.cabal
codekoan-reply-cache/: Main.hs  codekoan-reply-cache.cabal  settings.yaml
codekoan-reply-cache/Handler/: Get.hs  (+2 more)
codekoan-rmq-injector/: Settings.hs  codekoan-rmq-injector.cabal  settings.yaml
codekoan-search-service/: codekoan-search-service.cabal  settings.yaml
codekoan-semantic-service/: Foundation.hs  Settings.hs  codekoan-semantic-service.cabal  settings.yaml
codekoan-semantic-service/Settings/: RabbitMQ.hs
codekoan-site-light/: Foundation.hs  Helper.hs
codekoan-survey/: codekoan-survey.cabal
config/: routes  settings.yml
doc/: install.md  uni.md
ma-language-haskell/: ma-language-haskell.cabal
ma-language-haskell/src/Thesis/CodeAnalysis/Language/: Haskell.hs
ma-language-haskell/src/Thesis/CodeAnalysis/Language/Haskell/Internal/: HsToken.hs
ma-language-java/: ma-language-java.cabal
ma-language-java/src/Thesis/CodeAnalysis/Language/Java/: Internal.hs
ma-language-java/src/Thesis/CodeAnalysis/Language/Java/Internal/: BlockAnalysis.hs  Index.hs  Parser.hs  Tokens.hs
ma-language-python/: ma-language-python.cabal  stack.yaml
ma-messaging/: ma-messaging.cabal
ma-messaging/src/Thesis/Messaging/: Feedback.hs  Message.hs  Query.hs  ResultSet.hs  SemanticQuery.hs
ma-postgres-indexer/: ma-postgres-indexer.cabal
ma-reply-cache/: Application.hs  Foundation.hs  Main.hs  Settings.hs  ma-reply-cache.cabal  routes  settings.yaml
ma-rmq-injector/: Foundation.hs  Main.hs  Settings.hs  ma-rmq-injector.cabal  settings.yaml  stack.yaml.old
ma-rmq-injector/Handler/: Status.hs  Submit.hs
ma-search-backend/: ma-search-backend.cabal  stack.yaml
ma-search-backend/app/: Main.hs
ma-search-backend/src/Thesis/: PatternClustering.hs  Search.hs  SearchException.hs
ma-search-backend/src/Thesis/CodeAnalysis/: Language.hs  Mutation.hs  Semantic.hs
ma-search-backend/src/Thesis/CodeAnalysis/Language/: CommonTokenParsers.hs  Internal.hs
ma-search-backend/src/Thesis/CodeAnalysis/Language/Internal/: StandardTokenBlockAnalysis.hs
ma-search-backend/src/Thesis/CodeAnalysis/Mutation/: Base.hs  Class.hs  IdentifierReplacement.hs
ma-search-backend/src/Thesis/CodeAnalysis/Semantic/: BlockData.hs  Blocks.hs  Chatter.hs  Internal.hs  MonadicAnalyzer.hs  Source.hs
ma-search-backend/src/Thesis/Data/: Graph.hs  Range.hs
ma-search-backend/src/Thesis/Data/Stackoverflow/: Answer.hs  Dictionary.hs  Dump.hs  Question.hs  StackoverflowPost.hs
ma-search-backend/src/Thesis/Data/Stackoverflow/Dictionary/: Database.hs  Postgres.hs
ma-search-backend/src/Thesis/Data/Stackoverflow/Dump/Export/: Postgres.hs
ma-search-backend/src/Thesis/Data/Stackoverflow/Dump/Source/: Postgres.hs
ma-search-backend/src/Thesis/Search/: AlignmentMatch.hs  CompressedTrie.hs  FragmentData.hs  Index.hs  Levenstein.hs  NGrams.hs  ResultSet.hs  Settings.hs
ma-search-backend/src/Thesis/Util/: ConduitUtils.hs  LoggingUtils.hs  MonadUtils.hs  VectorView.hs
ma-search-backend/src/Thesis/Util/Benchmark/: Subsumption.hs
ma-search-backend/test/Thesis/CodeAnalysis/Semantic/: IdentifierSplitterSpec.hs
ma-search-backend/test/Thesis/Data/: GraphSpec.hs  RangeSpec.hs
ma-search-backend/test/Thesis/Search/: CompressedTrieSpec.hs  LevensteinSpec.hs
ma-search-service/: LICENSE  ma-search-service.cabal  settings.yaml  stack.yaml
ma-search-service/app/: Main.hs
ma-search-service/src/Thesis/: ServiceSettings.hs
ma-search-service/src/Thesis/SearchService/: ApplicationType.hs  ServiceSettings.hs
ma-semantic-service/: Application.hs  Foundation.hs  client_session_key.aes  routes  settings.yaml  stack.yaml
ma-site/: Application.hs  Foundation.hs  Helpers.hs  Settings.hs  ma-site.cabal
ma-site-light/: Application.hs  Foundation.hs  Settings.hs  ma-site-light.cabal  stack.yaml
ma-survey/: ma-survey.cabal  settings.yaml
ma-survey/app/: Main.hs
ma-survey/app/Thesis/: SurveySettings.hs
ma-survey/app/Thesis/Survey/: DirHelper.hs  LocalWithIndex.hs  Mutation.hs
ma-xml-analyzer/: ma-xml-analyzer.cabal
ma-xml-analyzer/app/: Main.hs
ma-xml-analyzer/src/: Lib.hs
ma-xml-analyzer/src/Thesis/: Search.hs
ma-xml-analyzer/src/Thesis/CodeAnalysis/: Language.hs  Semantic.hs  StackoverflowBodyParser.hs
ma-xml-analyzer/src/Thesis/CodeAnalysis/Language/: Internal.hs  Java.hs  Python.hs
ma-xml-analyzer/src/Thesis/CodeAnalysis/Language/Internal/: StandardTokenBlockAnalysis.hs
ma-xml-analyzer/src/Thesis/CodeAnalysis/Language/Java/: Internal.hs
ma-xml-analyzer/src/Thesis/CodeAnalysis/Language/Java/Internal/: BlockAnalysis.hs  Index.hs  Parser.hs  Tokens.hs  Type.hs
ma-xml-analyzer/src/Thesis/CodeAnalysis/Language/Python/Internal/: BlockAnalysis.hs
ma-xml-analyzer/src/Thesis/CodeAnalysis/Semantic/: Blocks.hs  CamelCaseSplitter.hs  Chatter.hs  IdentifierSplitter.hs  Source.hs
ma-xml-analyzer/src/Thesis/Data/: Graph.hs  Range.hs
ma-xml-analyzer/src/Thesis/Data/Stackoverflow/: Dictionary.hs  Dump.hs  Question.hs  SOAccess.hs
ma-xml-analyzer/src/Thesis/Data/Stackoverflow/Dictionary/: Database.hs  Postgres.hs
ma-xml-analyzer/src/Thesis/Data/Stackoverflow/Dump/Export/: Postgres.hs
ma-xml-analyzer/src/Thesis/Data/Stackoverflow/Dump/Source/: Postgres.hs
ma-xml-analyzer/src/Thesis/Search/: CompressedTrie.hs  Index.hs  ResultSet.hs  SearchResult.hs
ma-xml-analyzer/src/Thesis/Util/: ConduitUtils.hs
ma-xml-analyzer/test/Thesis/Data/: RangeSpec.hs
ma-xml-analyzer/test/Thesis/Search/: CompressedTrieSpec.hs
src/: Lib.hs
templates/: default-layout-wrapper.hamlet  submit.hamlet
test/: Spec.hs
(+122 files in other folders)
