name:                ma-xml-analyzer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ma-xml-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Thesis.CodeAnalysis.StackoverflowBodyParser
                     , Thesis.Levenstein
                     , Thesis.Tokenizer
                     , Thesis.Trie
  build-depends:       attoparsec >= 0.13
                     , base >= 4.7 && < 5
                     , binary >= 0.7.5.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4
                     , html-conduit >= 1.2
                     , resourcet >= 1.1.7.4
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , vector-binary-instances >= 0.2.3
                     , xml-conduit >= 1.3
                     , xml-types >= 0.3.6
  default-language:    Haskell2010

executable ma-xml-analyzer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , binary >= 0.7.5.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , containers >= 0.5.6.2
                     , ma-xml-analyzer
                     , resourcet >= 1.1.7.4
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , xml-types >= 0.3.6
  default-language:    Haskell2010

test-suite ma-xml-analyzer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary >= 0.7.5.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , containers >= 0.5.6.2
                     , ma-xml-analyzer
                     , resourcet >= 1.1.7.4
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , xml-types >= 0.3.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ma-xml-analyzer
