name:                ma-xml-analyzer
version:             0.4.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ma-xml-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Christof Schramm
maintainer:          christof.schramm@campus.lmu.de
copyright:           2016 Christof Schramm
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Thesis.CodeAnalysis.StackoverflowBodyParser
                     , Thesis.CodeAnalysis.Language
                     , Thesis.CodeAnalysis.Language.CommonTokenParsers
                     , Thesis.CodeAnalysis.Language.Java

                     , Thesis.Data.Stackoverflow.XML.Helpers
                     , Thesis.Data.Stackoverflow.Answer
                     , Thesis.Data.Stackoverflow.Question
                     , Thesis.Data.Stackoverflow.StackoverflowPost
                     , Thesis.Data.Stackoverflow.Dictionary
                     , Thesis.Data.Stackoverflow.Dump
                     , Thesis.Data.Text.PositionRange
                     , Thesis.Data.Range

                     , Thesis.Search
                     , Thesis.Search.Index
                     , Thesis.Search.BloomFilter
                     , Thesis.Search.CompressedTrie
                     , Thesis.Search.Levenstein
                     , Thesis.Search.NGrams
                     , Thesis.Search.ResultSet
                     , Thesis.Search.SearchResult
                     , Thesis.Search.Trie

  build-depends:       attoparsec >= 0.13
                     , base >= 4.7 && < 5
                     , binary >= 0.7.5.0
                     , bloomfilter >= 2.0.1.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , conduit-extra >= 1.1.13
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4
                     , exceptions >= 0.8.2.1
                     , hashable >= 1.2.4.0
                     , html-conduit >= 1.2
                     , parallel >= 3.2
                     , resourcet >= 1.1.7.4
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , vector-binary-instances >= 0.2.3
                     , xml-conduit >= 1.3
                     , xml-types >= 0.3.6
  default-language:    Haskell2010

executable ma-xml-analyzer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  build-depends:       base
                     , binary >= 0.7.5.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , containers >= 0.5.6.2
                     , exceptions >= 0.8.2.1
                     , hashable >= 1.2.4.0
                     , ma-xml-analyzer
                     , resourcet >= 1.1.7.4
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , xml-types >= 0.3.6
  default-language:    Haskell2010

executable build-index
  hs-source-dirs:      build-index
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  build-depends:       base
                     , binary >= 0.7.5.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , containers >= 0.5.6.2
                     , exceptions >= 0.8.2.1
                     , hashable >= 1.2.4.0
                     , ma-xml-analyzer
                     , resourcet >= 1.1.7.4
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , xml-types >= 0.3.6
  default-language:    Haskell2010

test-suite ma-xml-analyzer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary >= 0.7.5.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , containers >= 0.5.6.2
                     , exceptions >= 0.8.2.1
                     , hashable >= 1.2.4.0
                     , hspec >= 2.2.3
                     , ma-xml-analyzer
                     , QuickCheck >= 2.8
                     , resourcet >= 1.1.7.4
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , xml-types >= 0.3.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ma-xml-analyzer
