name:               ma-semantic-service
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          ma-semantic-service
  main-is:          Main.hs
  other-modules:    Application
                  , Foundation

                  , Settings
                  , Settings.LogSettings

                  , Handler.Submit
                  , Handler.Status

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  aeson >= 0.11
                , amqp >= 0.13
                , base
                , exceptions >= 0.8
                , ma-messaging >= 0.1.0.0
                , ma-search-backend >= 0.6.0
                , ma-language-java >= 0.1.0
                , ma-language-python >= 0.1.0
                , monad-logger >= 0.3.19
                , text >= 1.2.2
                , yaml >= 0.8.18.1
                , yesod-core
                
                

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
