name:                ma-language-java
version:             0.1.0.0
synopsis:            The java language for code analysis
description:         Please see README.md
homepage:            https://github.com/githubuser/ma-language-java#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Thesis.CodeAnalysis.Language.Java
                     , Thesis.CodeAnalysis.Language.Java.Internal
                     , Thesis.CodeAnalysis.Language.Java.Internal.BlockAnalysis
                     , Thesis.CodeAnalysis.Language.Java.Internal.Index
                     , Thesis.CodeAnalysis.Language.Java.Internal.Parser
                     , Thesis.CodeAnalysis.Language.Java.Internal.Tokens
                     , Thesis.CodeAnalysis.Language.Java.Internal.Type
  build-depends:       base >= 4.7 && < 5
                     , ma-xml-analyzer >= 0.6.0.0
                     , attoparsec >= 0.13
                     , binary >= 0.7.5
                     , bloomfilter >= 2.0
                     , conduit >= 1.2.6
                     , containers >= 0.5.2
                     , deepseq >= 1.4
                     , hashable >= 1.2.4
                     , resourcet >= 1.1.7
                     , text >= 1.2.2
                     , transformers >= 0.4.2
                     , vector >= 0.11
  default-language:    Haskell2010

test-suite ma-language-java-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ma-language-java
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ma-language-java
