name:                ma-messaging
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ma-messaging#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Thesis.Messaging.Feedback
                     , Thesis.Messaging.Message
                     , Thesis.Messaging.Query
                     , Thesis.Messaging.ResultSet
                     , Thesis.Messaging.SemanticQuery
  build-depends:       aeson >= 0.11
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6
                     , ma-search-backend >= 0.6.0.0
                     , text >= 1.2.2
                     , time >= 1.5
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

test-suite ma-messaging-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ma-messaging
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ma-messaging
