name:                ma-search-backend
version:             0.6.0.0
synopsis:            Language independent code pattern search engine backend
description:         Please see README.md
homepage:            https://github.com/githubuser/ma-xml-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Christof Schramm
maintainer:          christof.schramm@campus.lmu.de
copyright:           2016 Christof Schramm
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ma-search-backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.8
                     , ma-search-backend
                     , random >= 1.1
                     , vector >= 0.11
                     , containers >= 0.5.6
                     , deepseq >= 1.4.1
  
                     
library
  hs-source-dirs:      src
  exposed-modules:     Thesis.CodeAnalysis.Language
                     , Thesis.CodeAnalysis.Language.Internal
                     , Thesis.CodeAnalysis.Language.Internal.StandardTokenBlockAnalysis
                     , Thesis.CodeAnalysis.Language.CommonTokenParsers
                     , Thesis.CodeAnalysis.Semantic
                     , Thesis.CodeAnalysis.Semantic.BlockData
                     , Thesis.CodeAnalysis.Semantic.Blocks
                     , Thesis.CodeAnalysis.Semantic.CamelCaseSplitter
                     , Thesis.CodeAnalysis.Semantic.Chatter
                     , Thesis.CodeAnalysis.Semantic.IdentifierSplitter
                     , Thesis.CodeAnalysis.Semantic.MonadicAnalyzer
                     , Thesis.CodeAnalysis.Semantic.Source
                     , Thesis.CodeAnalysis.StackoverflowBodyParser

                     , Thesis.Data.Graph
                     , Thesis.Data.Range
                     , Thesis.Data.Stackoverflow.XML.Helpers
                     , Thesis.Data.Stackoverflow.Answer
                     , Thesis.Data.Stackoverflow.Question
                     , Thesis.Data.Stackoverflow.StackoverflowPost
                     , Thesis.Data.Stackoverflow.Dictionary
                     , Thesis.Data.Stackoverflow.Dictionary.Postgres
                     , Thesis.Data.Stackoverflow.Dump
                     , Thesis.Data.Stackoverflow.Dump.Export.Postgres
                     , Thesis.Data.Stackoverflow.Dump.Source.Postgres
                     , Thesis.Data.Text.PositionRange

                     , Thesis.Search
                     , Thesis.Search.AlignmentMatch
                     , Thesis.Search.Index
                     , Thesis.Search.BloomFilter
                     , Thesis.Search.CompressedTrie
                     , Thesis.Search.Levenstein
                     , Thesis.Search.NGrams
                     , Thesis.Search.ResultSet
                     , Thesis.Search.Settings
                     , Thesis.Search.Trie

                     , Thesis.SearchException

                     , Thesis.Util.ConduitUtils

  build-depends:       aeson >= 0.11
                     , attoparsec >= 0.13
                     , base >= 4.7 && < 5
                     , binary >= 0.7.5.0
                     , bloomfilter >= 2.0.1.0
                     , bytestring >= 0.10.6.0
                     , chatter >= 0.9.0.0
                     , conduit >= 1.2.6.6
                     , conduit-extra >= 1.1.13
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4
                     , directory >= 1.2.2.0
                     , exceptions >= 0.8.2.1
                     , filepath >= 1.4.0.0
                     , hashable >= 1.2.4.0
                     , html-conduit >= 1.2
                     , http-conduit >= 2.1.10
                     , maximal-cliques >= 0.1.1
                     , monad-logger >= 0.3.9
                     , parallel >= 3.2
                     , postgresql-simple >= 0.5.2
                     , resourcet >= 1.1.7.4
                     , split >= 0.2.3.1
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , vector-binary-instances >= 0.2.3
                     , xml-conduit >= 1.3
                     , xml-types >= 0.3.6
  default-language:    Haskell2010

test-suite ma-search-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck >= 2.8
                     , base
                     , binary >= 0.7.5.0
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , containers >= 0.5.6.2
                     , directory >= 1.2.2.0
                     , exceptions >= 0.8.2.1
                     , filepath >= 1.4.0.0
                     , hashable >= 1.2.4.0
                     , hspec >= 2.2.3
                     , ma-search-backend
                     , resourcet >= 1.1.7.4
                     , split >= 0.2.3.1
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     , xml-types >= 0.3.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ma-xml-analyzer
