name:                ma-search-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ma-search-service#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Thesis.SearchService.ServiceSettings
                   , Thesis.SearchService.ApplicationType
                   , Thesis.SearchService.InitializationException
  build-depends:     aeson >= 0.11
                   , amqp >= 0.13
                   , base >= 4.7 && < 5
                   , conduit >= 1.2.6
                   , exceptions >= 0.8.3
                   , hashable >= 1.2
                   , http-conduit >= 2.1.11
                   , ma-language-java >= 0.1.0.0
                   , ma-language-python >= 0.1.0.0
                   , ma-messaging >= 0.1.0.0
                   , ma-search-backend >= 0.6.0
                   , monad-logger >= 0.3.19
                   , postgresql-simple >= 0.5.2
                   , text >= 1.2.2
                   , transformers >= 0.4
                   , yaml >= 0.8.18.1
  default-language:  Haskell2010

executable           ma-search-service
  main-is:           Main.hs
  hs-source-dirs:    app
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:     aeson >= 0.11
                   , amqp >= 0.13
                   , base >= 4.7 && < 5
                   , exceptions >= 0.8.3
                   , hashable >= 1.2
                   , http-conduit >= 2.1.11
                   , lifted-async >= 0.9
                   , ma-messaging >= 0.1.0.0
                   , ma-search-backend >= 0.6.0
                   , ma-search-service
                   , monad-control >= 1.0
                   , monad-logger >= 0.3.19
                   , postgresql-simple >= 0.5.2
                   , text >= 1.2.2
                   , transformers >= 0.4
                   , yaml >= 0.8.18.1
  default-language:  Haskell2010
  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N -Wall -fno-warn-unused-do-bind

test-suite ma-search-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ma-search-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ma-search-service
