name: ma-survey
version: 0.1.0.0
cabal-version: >= 1.10

executable ma-survey-exe
  hs-source-dirs: app
  main-is: Main.hs
  other-modules: Thesis.SurveySettings
  build-depends: aeson >= 1.0.2
               , base >= 4.8
               , bytestring >= 0.10.8.1
               , connection >= 0.2
               , containers >= 0.5.6
               , directory >= 1.3.0.0
               , exceptions >= 0.8.3
               , http-conduit >= 2.1.11
               , lifted-async >= 0.9
               , ma-messaging
               , ma-search-backend
               , monad-logger >= 0.3.19
               , postgresql-simple >= 0.5.2
               , text >= 1.2.2.1
               , time >= 1.5.0.1
               , transformers >= 0.4.2.0
               , vector >= 0.11.0.0
               , yaml >= 0.8.18.1