name: ma-survey
version: 0.1.0.0
cabal-version: >= 1.10
build-type: Simple

executable ma-survey-exe
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  other-modules:  Thesis.SurveySettings
                , Thesis.Survey.DirHelper
                , Thesis.Survey.LocalWithIndex
  ghc-options:  -O2 -optc-O3 -fspecialise-aggressively -fexpose-all-unfoldings -threaded
  build-depends: aeson >= 1.0.2
               , attoparsec >= 0.13
               , base >= 4.8
               , bytestring >= 0.10.8.1
               , conduit >= 1.2.6.6
               , conduit-extra >= 1.1.13
               , connection >= 0.2
               , containers >= 0.5.6
               , directory >= 1.3.0.0
               , exceptions >= 0.8.3
               , filepath >= 1.4.1
               , http-conduit >= 2.1.11
               , lifted-async >= 0.9
               , ma-language-java
               , ma-language-python
               , ma-messaging
               , ma-search-backend
               , monad-logger >= 0.3.19
               , MonadRandom >= 0.5.1
               , postgresql-simple >= 0.5.2
               , statistics >= 0.13
               , text >= 1.2.2.1
               , time >= 1.5.0.1
               , transformers >= 0.4.2.0
               , vector >= 0.11.0.0
               , yaml >= 0.8.18.1